# de-course-week3

./: app.py  batch.py  docker-compose.yml  insert.py  pyproject.toml  pytest.ini  requirements.txt  run-test.sh  select_practice.py  sql_injection.py  update_delete.py
.github/workflows/: workflow.yml
test/homework/: q10_update_peach_position.py  q11_delete_null_visit.py  q1_create_employee_table.py  q2_insert_employee_table.py  q3_create_visit_log.py  q4_insert_visitlog_table.py  q5_employee_female.py  q6_employee_male.py  q7_visit_log_cnt.py  q8_visit_log_group_by_purpose_cnt.py  q9_find_visit_employee.py
tests/: test_do_not_modify_this_file.py
tests/data/: all_data.py
tests/homework/: q10_update_peach_position.py  q11_delete_null_visit.py  q1_create_employee_table.py  q2_insert_employee_table.py  q3_create_visit_log.py  q4_insert_visitlog_table.py  q5_employee_female.py  q6_employee_male.py  q7_visit_log_cnt.py  q8_visit_log_group_by_purpose_cnt.py  q9_find_visit_employee.py  test_do_not_modify_this_file.py
tests/score/: criteria.py  traits.py
tests/util/: datastructure.py  dbutil.py  fixtures.py
